Fully implemented all level refactoring.  Did not yet add blocks to later levels.  Passes all tests.